- fix problem with wsdl and soap service. - fix tests - move app properties to yml file