@@ -2,12 +2,25 @@ package com.gogoaren.indarra.servicecountry;
 
 import org.springframework.util.Assert;
 
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class TestUtils {
-    public static String readFileAsString(String file) throws Exception {
-        Assert.notNull(file, "file does not exist");
-        return new String(Files.readAllBytes(Paths.get(file)));
+    public static String readFileAsString(InputStream inputStream) throws Exception {
+        return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+    }
+
+    public static InputStream getFileFromResourceAsStream(String fileName) {
+
+        ClassLoader classLoader = TestUtils.class.getClassLoader();
+        InputStream inputStream = classLoader.getResourceAsStream(fileName);
+
+        if (inputStream == null) {
+            throw new IllegalArgumentException("file not found! " + fileName);
+        } else {
+            return inputStream;
+        }
     }
 }
